[llm-agent] feat: заходит улитка в бар
