# llm-service/pkg/agent/agent.pb.validate.go
@@ -698,34 +698,12 @@ func (m *StreamMessageRequest) validate(all bool) error {
 
 	var errors []error
 
-	if utf8.RuneCountInString(m.GetOrgId()) < 1 {
-		err := StreamMessageRequestValidationError{
-			field:  "OrgId",
-			reason: "value length must be at least 1 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if utf8.RuneCountInString(m.GetContent()) < 1 {
-		err := StreamMessageRequestValidationError{
-			field:  "Content",
-			reason: "value length must be at least 1 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if m.ChatId != nil {
-
-		if utf8.RuneCountInString(m.GetChatId()) < 1 {
+	switch v := m.Pyaload.(type) {
+	case *StreamMessageRequest_NewMessage:
+		if v == nil {
 			err := StreamMessageRequestValidationError{
-				field:  "ChatId",
-				reason: "value length must be at least 1 runes",
+				field:  "Pyaload",
+				reason: "oneof value cannot be a typed-nil",
 			}
 			if !all {
 				return err
@@ -733,6 +711,37 @@ func (m *StreamMessageRequest) validate(all bool) error {
 			errors = append(errors, err)
 		}
 
+		if all {
+			switch v := interface{}(m.GetNewMessage()).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, StreamMessageRequestValidationError{
+						field:  "NewMessage",
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, StreamMessageRequestValidationError{
+						field:  "NewMessage",
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(m.GetNewMessage()).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return StreamMessageRequestValidationError{
+					field:  "NewMessage",
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	default:
+		_ = v // ensures v is used
 	}
 
 	if len(errors) > 0 {
@@ -814,6 +823,145 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = StreamMessageRequestValidationError{}
+
+// Validate checks the field values on NewMessagePayload with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *NewMessagePayload) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on NewMessagePayload with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// NewMessagePayloadMultiError, or nil if none found.
+func (m *NewMessagePayload) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *NewMessagePayload) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if utf8.RuneCountInString(m.GetOrgId()) < 1 {
+		err := NewMessagePayloadValidationError{
+			field:  "OrgId",
+			reason: "value length must be at least 1 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if utf8.RuneCountInString(m.GetContent()) < 1 {
+		err := NewMessagePayloadValidationError{
+			field:  "Content",
+			reason: "value length must be at least 1 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if m.ChatId != nil {
+
+		if utf8.RuneCountInString(m.GetChatId()) < 1 {
+			err := NewMessagePayloadValidationError{
+				field:  "ChatId",
+				reason: "value length must be at least 1 runes",
+			}
+			if !all {
+				return err
+			}
+			errors = append(errors, err)
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return NewMessagePayloadMultiError(errors)
+	}
+
+	return nil
+}
+
+// NewMessagePayloadMultiError is an error wrapping multiple validation errors
+// returned by NewMessagePayload.ValidateAll() if the designated constraints
+// aren't met.
+type NewMessagePayloadMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m NewMessagePayloadMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m NewMessagePayloadMultiError) AllErrors() []error { return m }
+
+// NewMessagePayloadValidationError is the validation error returned by
+// NewMessagePayload.Validate if the designated constraints aren't met.
+type NewMessagePayloadValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e NewMessagePayloadValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e NewMessagePayloadValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e NewMessagePayloadValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e NewMessagePayloadValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e NewMessagePayloadValidationError) ErrorName() string {
+	return "NewMessagePayloadValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e NewMessagePayloadValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sNewMessagePayload.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = NewMessagePayloadValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = NewMessagePayloadValidationError{}
 
 // Validate checks the field values on StreamMessageResponse with the rules
 // defined in the proto definition for this message. If any rules are
